@@ -60,3 +60,4 @@ Changelog
 12-10-2025 ... 1.1.1.6 ... Network 1-4 .......................... (15.7 +/- 10.3) , (8 + 0.08), (SPRT, 1864),(https://sscg13.pythonanywhere.com/test/1717/)
 01-31-2026 ... 1.1.2.0 ... Quiet History Pruning ................ (32.8 +/- 14.6) , (8 + 0.08), (SPRT, 680) ,(https://sscg13.pythonanywhere.com/test/1867/)
 02-01-2026 ... 1.1.2.1 ... Cutnode in LMR ....................... (9.1 +/- 6.8)   , (8 + 0.08), (SPRT, 3106),(https://openbench.nocturn9x.space/test/5522/)
+02-02-2026 ... 1.1.2.2 ... 1-Ply Continuation History ........... (4.8 +/- 3.7)   , (8 + 0.08), (SPRT,10162),(https://openbench.nocturn9x.space/test/5525/)
